--- a/style.css
+++ b/style.css
@@ -19,4 +19,6 @@ body {
   font-family: 'Cormorant SC', serif;
   color: #e7e7e7;
   margin: 0;
+  font-variant: small-caps;
+  text-transform: uppercase;
 }
