--- a/style.css
+++ b/style.css
@@ -4,21 +4,22 @@ body {
   margin: 0;
   font-family: 'Cormorant', serif;
 }
+
 .header {
   background-color: #030303;
   padding: 20px;
   padding-left: 40px;
   text-align: left; 
 }
+
 .header h1 {
   font-family: 'Cormorant', serif;
-  color: #e7e7e7;
-  margin: 0;
+  font-weight: 400;
+  text-transform: none;
 }
+
 .header h2 {
   font-family: 'Cormorant SC', serif;
-  color: #e7e7e7;
-  margin: 0;
-  font-variant: small-caps;
+  font-weight: 400;
   text-transform: uppercase;
 }
