--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ body {
   font-family: 'Cormorant', serif;
   font-weight: 400;
   text-transform: none;
+  margin-bottom: 10px;
 }
 
 .header h2 {
   font-family: 'Cormorant SC', serif;
-  font-weight: 600; 
-  text-transform: uppercase; 
+  font-weight: 600;
+  text-transform: uppercase;
 }
