--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@ body {
 }
 
 .header h1 {
-  font-family: 'Cormorant', serif;
-  font-weight: 400;
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
   text-transform: none;
-  margin-bottom: 5px;
-  font-size: 28px;
+  margin-bottom: 10px;
+  font-size: 26px;
 }
 
 .header h2 {
-  font-family: 'Cormorant SC', serif;
-  font-weight: 600;
+  font-family: 'Playfair Display', serif;
+  font-weight: 400;
   text-transform: uppercase;
   font-size: 18px;
 }
