--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
   text-transform: none;
-  margin-bottom: 1px;
+  margin-bottom: 5px;
   font-size: 26px;
 }
 
@@ -25,4 +25,5 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   font-size: 18px;
+  margin-top: 5px;
 }
