--- a/style.css
+++ b/style.css
@@ -12,18 +12,18 @@ body {
   text-align: left; 
 }
 
-.header h1 {
+h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  text-transform: none;
-  margin-bottom: 5px;
-  font-size: 26px;
+  font-size: 50px;
+  margin-bottom: 10px;
+  line-height: 1.2;
 }
 
-.header h2 {
+h2 {
   font-family: 'Playfair Display', serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 18px;
-  margin-top: 5px;
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 0;
+  line-height: 1.2;
 }
