--- a/style.css
+++ b/style.css
@@ -14,16 +14,17 @@ body {
 
 h1 {
   font-family: 'Playfair Display', serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 50px;
-  margin-bottom: 10px;
+  margin: 0;
   line-height: 1.2;
 }
 
 h2 {
   font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-weight: 300;
   font-size: 30px;
   margin-top: 0;
+  margin-bottom: 0;
   line-height: 1.2;
 }
