--- a/style.css
+++ b/style.css
@@ -8,23 +8,24 @@ body {
 .header {
   background-color: #030303;
   padding: 20px;
-  padding-left: 40px;
+  padding-left: 200px;
   text-align: left; 
 }
 
 h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 26px;
+  font-size: 50px;
   margin: 0;
+  margin-bottom: 5px;
   line-height: 1.2;
 }
 
 h2 {
   font-family: 'Playfair Display', serif;
-  font-weight: 400;
-  font-size: 18px;
-  margin-top: 0;
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 5px;
   margin-bottom: 0;
   line-height: 1.2;
 }
