--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   background-color: #030303;
   color: #e7e7e7;
   margin: 0;
-  font-family: 'Cormorant', serif;
+  font-family: 'Playfair Display', serif;
+  box-sizing: border-box;
 }
 
 .header {
@@ -10,6 +11,7 @@ body {
   padding: 20px;
   padding-left: 200px;
   text-align: left; 
+  box-sizing: border-box;
 }
 
 h1 {
