--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #030303;
   color: #e7e7e7;
-  margin: 0;
+  margin: 20px;
   font-family: 'Playfair Display', serif;
   font-size: 20px;
 }
