--- a/style.css
+++ b/style.css
@@ -1,22 +1,21 @@
 body {
   background-color: #030303;
   color: #e7e7e7;
-  margin: 20px;
+  margin: 0;
   font-family: 'Playfair Display', serif;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .header {
   background-color: #030303;
-  padding: 20px;
-  padding-left: 20px;
+  padding: 30px 0 20px 60px;
   text-align: left;
 }
 
 h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 32px;
   margin: 0;
   margin-bottom: 5px;
   line-height: 1.2;
@@ -25,7 +24,7 @@ h1 {
 h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 22px;
   margin-top: 5px;
   margin-bottom: 0;
   line-height: 1.2;
