--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 32px !important;
   margin: 0;
   margin-bottom: 5px;
   line-height: 1.2;
@@ -24,7 +24,7 @@ h1 {
 h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 22px !important;
   margin-top: 5px;
   margin-bottom: 0;
   line-height: 1.2;
