--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   font-size: 18px !important;
 }
 
+img {
+  margin-left: 120px;
+}
+
 .header {
   background-color: #030303;
   padding: 30px 0 20px 120px;
